fix: Reduced footer spacing and fixed class .name clashing

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@
   cursor: pointer;
 }
 
-.name {
+.name_user {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
@@ -224,7 +224,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     padding: 2em 0em 0em;
-    gap: 2em;
+    gap: 1em;
     flex: none;
     order: 0;    
   }
